--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,9 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-
+.titulo-inicio{
+    font-family: 'Nunito', sans-serif;
+}
 
 
 .btn-cssbuttons {
@@ -198,139 +200,6 @@ a:link.cardt-button, a:visited.cardt-button, a:active.cardt-button {
     }
 }
 
-
-  /* Tic Tac Toe Grid */
-.btn-tic {
-    padding: 0.8em 1.8em;
-    border: 2px solid #17C3B2;
-    position: relative;
-    overflow: hidden;
-    background-color: transparent;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 16px;
-    transition: .3s;
-    z-index: 1;
-    font-family: inherit;
-    color: #17C3B2;
-    font-weight: 600;
-}
-
-.btn-tic::before {
-    content: '';
-    width: 0;
-    height: 300%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(45deg);
-    background: #17C3B2;
-    transition: .5s ease;
-    display: block;
-    z-index: -1;
-}
-
-.btn-tic:hover::before {
-    width: 105%;
-}
-
-.btn-tic:hover {
-    color: #111;
-}
-
-/* .btn-tic:active{
-    background: red;
-  } */
-
-  /* CARTA */
-/* .card {
-    overflow: visible;
-    position: relative;
-    width: 190px;
-    height: 254px;
-    background: #fff;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
-    
-    }
-    
-    .card:before,
-    .card:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 4px;
-    background: #fff;
-    transition: 0.5s;
-    z-index: -99;
-    }
-    
-    .details {
-    position: absolute;
-    left: -10px;
-    right: 0;
-    bottom: 5px;
-    height: 60px;
-    text-align: center;
-    text-transform: uppercase;
-    }
-    
-    
-    .imgbox {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    bottom: 10px;
-    right: 10px;
-    background: #222;
-    transition: 0.5s;
-    z-index: 1;
-    bottom: 80px;
-    }
-    
-    .img img{
-    background: #a9a4ff;
-    
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    }
-    
-    
-    .title {
-    font-weight: 600;
-    font-size: 20px;
-    color: #777;
-    }
-    
-    .caption {
-    font-weight: 500;
-    font-size: 16px;
-    color: #4158D0;
-    display: block;
-    margin-top: 5px;
-    }
-    
-    
-    .card:hover .imgbox {
-    bottom: 10px;
-    }
-    
-    .card:hover:before {
-    transform: rotate(20deg);
-    }
-    
-    .card:hover:after {
-    transform: rotate(10deg);
-    box-shadow: 0 2px 20px rgba(0, 0, 0, .2);
-    }
-   */
-
-  /* BOTON VER MAS APPS */
 .cta {
     border: none;
     background: none;
@@ -381,10 +250,58 @@ a:link.cardt-button, a:visited.cardt-button, a:active.cardt-button {
     transform-origin: bottom left;
     }
 
-    /* .btn-tic:hover:after {
-        background-color: red;
-    }
-       */
+/* Boton inicio login */
+
+    .button-inicio {
+        --color: #F9A826;
+        font-family: inherit;
+        display: inline-block;
+        width: 8em;
+        height: 2.6em;
+        line-height: 2.5em;
+        margin: 20px;
+        position: relative;
+        overflow: hidden;
+        border: 2px solid var(--color);
+        transition: color .5s;
+        z-index: 1;
+        font-size: 17px;
+        border-radius: 6px;
+        font-weight: 500;
+        color: var(--color);
+        text-decoration: none;
+        text-align: center;
+       }
+       
+       .button-inicio:before {
+        content: "";
+        position: absolute;
+        z-index: -1;
+        background: var(--color);
+        height: 150px;
+        width: 200px;
+        border-radius: 50%;
+       }
+       
+       .button-inicio:hover {
+        color: #fff;
+       }
+       
+       .button-inicio:before {
+        top: 100%;
+        left: 100%;
+        transition: all .7s;
+       }
+       
+       .button-inicio:hover:before {
+        top: -30px;
+        left: -30px;
+       }
+       
+       .button-inicio:active:before {
+        background: #3a0ca3;
+        transition: background 0s;
+       }
     
     
     
