--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Nunito', sans-serif;
     
 }
 
@@ -312,3 +312,89 @@ a:link.cardt-button, a:visited.cardt-button, a:active.cardt-button {
         background-color: #484554;
         color: white;
     }
+
+
+    .card-rec {
+        
+        margin: 0 auto;
+        background-color: #e8e8e8;
+        border-radius: 8px;
+        z-index: 1;
+        border: 2px solid #e8e8e8;;
+       }
+       
+       .tools {
+        display: flex;
+        align-items: center;
+        padding: 9px;
+       }
+       
+       .circle {
+        padding: 0 4px;
+       }
+       
+       .box {
+        display: inline-block;
+        align-items: center;
+        width: 10px;
+        height: 10px;
+        padding: 1px;
+        border-radius: 50%;
+       }
+       
+       .red {
+        background-color: #ff605c;
+       }
+       
+       .yellow {
+        background-color: #ffbd44;
+       }
+       
+       .green {
+        background-color: #00ca4e;
+       }
+       
+
+       /* Boton para ver el demo */
+
+       .button-demo {
+        display: inline-block;
+        align-items: center;
+        font-family: inherit;
+        font-weight: 500;
+        font-size: 17px;
+        padding: 0.8em 1.3em 0.8em 0.9em;
+        color: white;
+        background: #ad5389;
+        background: linear-gradient(to right, #4741b3, #6c63ff, #554ed3);
+        border: none;
+        letter-spacing: 0.05em;
+        border-radius: 16px;
+        text-align: center;
+      }
+      
+      .button-demo .svg-demo {
+        margin-right: 3px;
+        transform: rotate(30deg);
+        transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+      }
+      
+      .button-demo .span-demo {
+        transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+        text-decoration: none;
+        color: white;
+      }
+      
+      .button-demo:hover .svg-demo {
+        transform: translateX(5px) rotate(90deg);
+        text-decoration: none;
+        color: white;
+      }
+      
+      .button-demo:hover .span-demo {
+        transform: translateX(7px);
+      }
+
+      .titulo-demo{
+        text-align: right;
+      }
