Correccion tipografia,alineacion, titulos e ilustraciones

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -396,7 +396,7 @@ a:link.cardt-button, a:visited.cardt-button, a:active.cardt-button {
       }
 
       .titulo-demo{
-        text-align: right;
+        text-align: left;
       }
 
       .img-inicio {
