--- a/public/css/style.css
+++ b/public/css/style.css
@@ -315,7 +315,7 @@ a:link.cardt-button, a:visited.cardt-button, a:active.cardt-button {
     }
 
 
-    .card-rec {
+    .card-prev-rec {
         
         margin: 0 auto;
         background-color: #e8e8e8;
@@ -356,7 +356,7 @@ a:link.cardt-button, a:visited.cardt-button, a:active.cardt-button {
        }
        
 
-       /* Boton para ver el demo */
+       /*-------------Boton para ver el demo-----------------------*/
 
        .button-demo {
         display: inline-block;
@@ -367,7 +367,7 @@ a:link.cardt-button, a:visited.cardt-button, a:active.cardt-button {
         padding: 0.8em 1.3em 0.8em 0.9em;
         color: white;
         background: #ad5389;
-        background: linear-gradient(to right, #4741b3, #6c63ff, #554ed3);
+        background:  #554cfc;
         border: none;
         letter-spacing: 0.05em;
         border-radius: 16px;
@@ -408,9 +408,149 @@ a:link.cardt-button, a:visited.cardt-button, a:active.cardt-button {
         /* overflow: hidden; */
         /* border-radius: 50%; */
       }
+
+      /*-----------------Boton iniciar sesion recetas-------------------------*/
+      .LogReg {
+        position: relative;
+        font-weight: 600;
+        height: 40px;
+        padding: 12px 20px;
+        outline: none;
+        border: 1px solid black;
+        background-color: transparent;
+        border-radius: 5px;
+        text-decoration: none;
+        color: black;
+      }
       
-      /* .img-inicio img {
-        width: auto;
+      .LogReg:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        top: 7px;
+        left: 7px;
         height: 100%;
-        margin-left: -90px;
-      } */
+        background-color: rgb(201, 184, 246);
+        z-index: -1;
+        transition: all 0.35s;
+        border-radius: inherit;
+        text-decoration: none;
+        color: black;
+      }
+      
+      .LogReg:hover:after {
+        top: 0px;
+        left: 0px;
+      }
+
+      .LogReg:hover {
+        color: black;
+      }
+
+
+      /*---------------Card para mostrar recetas----------------*/
+      .card-home-rec {
+        width: 252px;
+        height: 265px;
+        background: white;
+        border-radius: 30px;
+        box-shadow: 15px 15px 30px #bebebe,
+                   -15px -15px 30px #ffffff;
+        transition: 0.2s ease-in-out;
+        overflow: hidden;
+        display: inline-block;
+        margin-right: 32px;
+        /* margin-left: 32px; */
+        margin-top: 32px;
+        position: relative;
+      }
+      
+      .img {
+        width: 100%;
+        height: 50%;
+        background: linear-gradient(#e66465, #9198e5);
+        display: flex;
+        align-items: top;
+        justify-content: right;
+        
+      }
+      
+      .save {
+        transition: 0.2s ease-in-out;
+        border-radius: 10px;
+        margin: 20px;
+        width: 30px;
+        height: 30px;
+        background-color: #ffffff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
+      .text-rec {
+        margin: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: space-around;
+
+      }
+      
+      .save .svg {
+        transition: 0.2s ease-in-out;
+        width: 15px;
+        height: 15px;
+      }
+      
+      .icon-box {
+        margin-top: 15px;
+        width: 70%;
+        padding: 10px;
+        background-color: #e3fff9;
+        border-radius: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: left;
+      }
+      
+      .icon-box img {
+        width: 24px;
+      }
+      
+      .text-rec .h3-rec {
+        font-family: 'Lucida Sans' sans-serif;
+        font-size: 15px;
+        font-weight: 600;
+        padding: 0;
+        margin: 0;
+      }
+      
+      .text-rec .p-rec {
+        font-family: 'Lucida Sans' sans-serif;
+        color: #999999;
+        font-size: 13px;
+        padding: 0;
+        margin: 0;
+      }
+      
+      .icon-box .span-rec {
+        margin-left: 10px;
+        font-family: 'Lucida Sans' sans-serif;
+        font-size: 13px;
+        font-weight: light;
+        padding: 0;
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+      
+      .card:hover {
+        cursor: pointer;
+        box-shadow: 0px 10px 20px rgba(0,0,0,0.1);
+      }
+      
+      .save:hover {
+        transform: scale(1.1) rotate(10deg);
+      }
+      
+      .save:hover .svg {
+        fill: #ced8de;
+      }
