--- a/public/css/style.css
+++ b/public/css/style.css
@@ -468,11 +468,14 @@ a:link.cardt-button, a:visited.cardt-button, a:active.cardt-button {
       .img {
         width: 100%;
         height: 50%;
-        background: linear-gradient(#e66465, #9198e5);
+        /* background: linear-gradient(#e66465, #9198e5); */
         display: flex;
         align-items: top;
         justify-content: right;
-        
+        /* background-image:'img/pasta.jpg'; */
+        background-position: center; /* Center the image */
+        background-repeat: no-repeat; /* Do not repeat the image */
+        background-size: cover;
       }
       
       .save {
