--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,18 +6,29 @@ body{
     /* background-color: #feedff; */
     /* background-image: url("fondoHome.jpg"); */
     background-color: #2A0253;
-    min-height: 100vh;
+    
 }
 
 h1, h2{
   font-family: 'Righteous', cursive;
 }
-.row{
+.rowhome{
   display: flex;
   align-items: center;
   height: 100vh;
 }
 
+@media screen and (min-width: 601px) {
+  .h1SobreMi,.h1Proyectos {
+    font-size: 78px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .h1SobreMi,.h1Proyectos {
+    font-size: 61px;
+  }
+}
 
 #navbar{
   background: rgba(63, 63, 63, 0.42);
