--- a/public/css/styleRecetas.css
+++ b/public/css/styleRecetas.css
@@ -9,7 +9,7 @@
 
 /* Botón login y registro*/
 .button-inicio {
-  --color: #F9A826;
+  --color: #00A087;
   font-family: inherit;
   display: inline-block;
   width: 8em;
@@ -51,7 +51,7 @@
   left: -30px;
 }
 .button-inicio:active:before {
-  background: #f98826;
+  background: rgb(1, 152, 132);
   transition: background 0s;
 }
 
@@ -77,7 +77,7 @@
   top: 7px;
   left: 7px;
   height: 100%;
-  background-color: rgb(201, 184, 246);
+  background-color: #00A087;
   z-index: -1;
   transition: all 0.35s;
   border-radius: inherit;
@@ -131,6 +131,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: none;
 }
 .text-rec {
   margin: 20px;
@@ -154,6 +155,7 @@
   align-items: center;
   justify-content: left;
 }
+
 .icon-box img {
   width: 24px;
 }
@@ -190,3 +192,218 @@
 .save:hover .svg {
   fill: #ced8de;
 } 
+
+/* Loading centrado en el home */
+.load{
+  display: flex;
+  align-items: center;
+  height: 100vh;
+}
+
+/* estilo de navbar */
+#navbarRecetas{
+  background: #b7a99a68;
+  box-shadow: 0 8px 32px 0 #a0948854;
+  backdrop-filter: blur( 1.5px );
+  -webkit-backdrop-filter: blur( 1.5px );
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* al dejarlo posicionado como fixed aparece en pantalla al hacer scroll hacia arriba */
+  position: fixed;
+  top: 0;
+  transition: top 0.5s;
+}
+
+
+/* Estilo para el loading */
+.loader {
+  --background: linear-gradient(135deg, #03ddbc, #00A087);
+  --shadow: rgba(39, 94, 254, 0.28);
+  --text: #6C7486;
+  --page: rgba(255, 255, 255, 0.36);
+  --page-fold: rgba(255, 255, 255, 0.52);
+  --duration: 3s;
+  width: 200px;
+  height: 140px;
+  position: relative;
+}
+
+.loader:before, .loader:after {
+  --r: -6deg;
+  content: "";
+  position: absolute;
+  bottom: 8px;
+  width: 120px;
+  top: 80%;
+  box-shadow: 0 16px 12px var(--shadow);
+  transform: rotate(var(--r));
+}
+
+.loader:before {
+  left: 4px;
+}
+
+.loader:after {
+  --r: 6deg;
+  right: 4px;
+}
+
+.loader div {
+  width: 100%;
+  height: 100%;
+  border-radius: 13px;
+  position: relative;
+  z-index: 1;
+  perspective: 600px;
+  box-shadow: 0 4px 6px var(--shadow);
+  background-image: var(--background);
+}
+
+.loader div ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: relative;
+}
+
+.loader div ul li {
+  --r: 180deg;
+  --o: 0;
+  --c: var(--page);
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  transform-origin: 100% 50%;
+  color: var(--c);
+  opacity: var(--o);
+  transform: rotateY(var(--r));
+  -webkit-animation: var(--duration) ease infinite;
+  animation: var(--duration) ease infinite;
+}
+
+.loader div ul li:nth-child(2) {
+  --c: var(--page-fold);
+  -webkit-animation-name: page-2;
+  animation-name: page-2;
+}
+
+.loader div ul li:nth-child(3) {
+  --c: var(--page-fold);
+  -webkit-animation-name: page-3;
+  animation-name: page-3;
+}
+
+.loader div ul li:nth-child(4) {
+  --c: var(--page-fold);
+  -webkit-animation-name: page-4;
+  animation-name: page-4;
+}
+
+.loader div ul li:nth-child(5) {
+  --c: var(--page-fold);
+  -webkit-animation-name: page-5;
+  animation-name: page-5;
+}
+
+.loader div ul li svg {
+  width: 90px;
+  height: 120px;
+  display: block;
+}
+
+.loader div ul li:first-child {
+  --r: 0deg;
+  --o: 1;
+}
+
+.loader div ul li:last-child {
+  --o: 1;
+}
+
+.loader span {
+  display: block;
+  left: 0;
+  right: 0;
+  top: 100%;
+  margin-top: 20px;
+  text-align: center;
+  color: var(--text);
+}
+
+@keyframes page-2 {
+  0% {
+    transform: rotateY(180deg);
+    opacity: 0;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  35%, 100% {
+    opacity: 0;
+  }
+
+  50%, 100% {
+    transform: rotateY(0deg);
+  }
+}
+
+@keyframes page-3 {
+  15% {
+    transform: rotateY(180deg);
+    opacity: 0;
+  }
+
+  35% {
+    opacity: 1;
+  }
+
+  50%, 100% {
+    opacity: 0;
+  }
+
+  65%, 100% {
+    transform: rotateY(0deg);
+  }
+}
+
+@keyframes page-4 {
+  30% {
+    transform: rotateY(180deg);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  65%, 100% {
+    opacity: 0;
+  }
+
+  80%, 100% {
+    transform: rotateY(0deg);
+  }
+}
+
+@keyframes page-5 {
+  45% {
+    transform: rotateY(180deg);
+    opacity: 0;
+  }
+
+  65% {
+    opacity: 1;
+  }
+
+  80%, 100% {
+    opacity: 0;
+  }
+
+  95%, 100% {
+    transform: rotateY(0deg);
+  }
+}
