finalizacion de muestra de detalles de receta

--- a/public/css/styleRecetas.css
+++ b/public/css/styleRecetas.css
@@ -416,3 +416,9 @@
     transform: rotateY(0deg);
   }
 }
+
+.tarjeta-detalle{
+  border-radius: 0px;
+  margin-left: 0.5px;
+  margin-right: 0.5px;
+}
