--- a/public/css/styleRecetas.css
+++ b/public/css/styleRecetas.css
@@ -422,3 +422,15 @@
   margin-left: 0.5px;
   margin-right: 0.5px;
 }
+
+.error{
+  border-color: red;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] { -moz-appearance:textfield; }
