--- a/public/css/styleRecetas.css
+++ b/public/css/styleRecetas.css
@@ -427,10 +427,24 @@
   border-color: red;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+/* Estilos para los campos con clase "error" */
+.was-validated .form-control:invalid:focus, .was-validated .form-select:invalid:focus {
+  outline: none;
+  border: solid 2px red;
+  box-shadow: none; /* Estilo de enfoque personalizado en caso de error */
 }
 
-input[type=number] { -moz-appearance:textfield; }
+.was-validated .form-control:valid:focus, .was-validated .form-select:valid:focus{
+  outline: none;
+  border: solid 2px green;
+  box-shadow: none; 
+}
+
+/* Estilos para los campos sin clase "error" */
+input:not(.error):focus, .form-select:focus{
+  outline: none; /* Eliminar estilo de enfoque en otros casos */
+  
+  border: solid 2px rgb(51, 153, 255);
+  box-shadow: none;
+}
+
