--- a/public/css/style.css
+++ b/public/css/style.css
@@ -328,6 +328,7 @@ btn-cssbuttons ul li a:hover {
   opacity: 0.7;
 }
 
-/* @media screen and (min-width: 600px) {
-  
-} */
+.lista-proyectos{
+  width: auto;
+}
+
