--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,16 +18,22 @@ h1, h2{
 el tamaño de la fuente de los titulos será de 78px  */
 
 
-@media screen and (min-width: 601px) {
+@media screen and (min-width: 601px){
   .h1SobreMi,.h1Proyectos {
     font-size: 78px;
   }
 
 }
 
-/* Para responsive en pantallas que tengan HASTA 600 px de ancho y mas 
+/* Para responsive en pantallas que tengan HASTA 600 px de ancho y menos 
 el tamaño de la fuente de los titulos será de 61px  */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px){
+  .h1SobreMi,.h1Proyectos {
+    font-size: 61px;
+  }
+}
+
+@media screen and (width: 1024px){
   .h1SobreMi,.h1Proyectos {
     font-size: 61px;
   }
@@ -345,4 +351,49 @@ btn-cssbuttons ul li a:hover {
     height: auto !important;
     width: auto !important;
   }
+}
+
+
+@media screen and (max-width: 767px) {
+  .MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-alignItemsFlexStart.css-hhvo2v-MuiListItem-root {
+    height: 70px; 
+    padding: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px){
+  .MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-alignItemsFlexStart.css-hhvo2v-MuiListItem-root {
+    height: 65px; 
+    padding: 0px;
+  }
+
+
+  #imagen #imagenDefecto{
+    height: auto !important;
+    width: auto !important;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .controls {
+    margin-top: 12px; 
+    margin-bottom: 12px; 
+  }
+
+  .lista-proyectos{
+    height: auto !important;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .col-imagen, .col-texto, .contenedor-row, .contenedor-imagen, .col-img-home, .col-titulo-home, .col-contact{
+    width: 66.66666667%;
+  }
+}
+
+
+
+.css-uls1yk-MuiDivider-root{
+  margin-left: 0px !important;
 }
