--- a/public/css/style.css
+++ b/public/css/style.css
@@ -386,7 +386,7 @@ btn-cssbuttons ul li a:hover {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .col-imagen, .col-texto, .contenedor-row, .contenedor-imagen, .col-img-home, .col-titulo-home, .col-contact{
     width: 66.66666667%;
   }
