--- a/public/css/style.css
+++ b/public/css/style.css
@@ -396,13 +396,13 @@ btn-cssbuttons ul li a:hover {
 
 @media screen and (min-width: 180px) and (max-width: 700px) {
   .col-imagen, .col-texto, .contenedor-row, .contenedor-imagen, .col-img-home, .col-titulo-home, .col-contact{
-    width: 100.666667%;;
+    width: 100.666667% !important;
   }
 }
 
 @media screen and (min-width: 701px) and (max-width: 1023px) {
   .col-imagen, .col-texto, .contenedor-row, .contenedor-imagen, .col-img-home, .col-titulo-home, .col-contact{
-    width: 66.66666667%;
+    width: 66.66666667% !important;
   }
 }
 
