--- a/public/css/style.css
+++ b/public/css/style.css
@@ -353,15 +353,13 @@ btn-cssbuttons ul li a:hover {
   }
 }
 
-
-
-
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 180px) and (max-width: 767px){
   .MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-alignItemsFlexStart.css-hhvo2v-MuiListItem-root {
-    height: 70px; 
+    height: 83px; 
     padding: 0px;
   }
 }
+
 
 @media screen and (min-width: 768px) and (max-width: 1024px){
   .MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-alignItemsFlexStart.css-hhvo2v-MuiListItem-root {
