prueba resolucion responsive

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -354,7 +354,7 @@ btn-cssbuttons ul li a:hover {
 }
 
 @media screen and (min-width: 180px) and (max-width: 767px){
-  .MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-alignItemsFlexStart.css-hhvo2v-MuiListItem-root {
+  .MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-alignItemsFlexStart.css-14owld3 {
     height: 83px !important; 
     padding: 0px;
   }
@@ -362,7 +362,7 @@ btn-cssbuttons ul li a:hover {
 
 
 @media screen and (min-width: 768px) and (max-width: 1024px){
-  .MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-alignItemsFlexStart.css-hhvo2v-MuiListItem-root {
+  .MuiListItem-root.MuiListItem-gutters.MuiListItem-padding.MuiListItem-alignItemsFlexStart.css-14owld3 {
     height: 65px !important; 
     padding: 0px;
   }
